[package]
name = "asg"
version = "0.1.0"
edition = "2024"
description = "Awesome Static Generator, turns markdown into a website."
repository = "https://github.com/vanyle/asg"

[profile.release]
codegen-units = 1
opt-level = "s"
strip = "symbols"
lto = "fat"
panic = "abort"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
colored = "3.0.0"
chrono = "0.4.39"
markdown = { version = "1.0.0-alpha.22" }
mlua = { version = "0.10.3", features = ["luau-jit", "serialize", "vendored"] }
notify-debouncer-full = { version = "0.6.0" }
regex = "1.11.1"
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
syntect = "5.2.0"
tokio = "1.43.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
walkdir = "2.5.0"

[build-dependencies]
chrono = "0.4.39"
